2.0.6.graal init